--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Rkoi2318_h3</string>
+    <string name="title_activity_pace_calculator">PaceCalculator</string>
 </resources>
